cmake_minimum_required(VERSION 3.17)
project(ft_ssl C)

set(CMAKE_C_STANDARD 11)

include_directories(ft_lftprintf/includes)
include_directories(ft_lftprintf/includes/libft)
include_directories(includes)
include_directories(srcs)

add_executable(ft_ssl
        ft_lftprintf/includes/libft/ft_atoi.c
        ft_lftprintf/includes/libft/ft_atoi_base.c
        ft_lftprintf/includes/libft/ft_atoi_size_t.c
        ft_lftprintf/includes/libft/ft_bzero.c
        ft_lftprintf/includes/libft/ft_char_in_string.c
        ft_lftprintf/includes/libft/ft_countwords.c
        ft_lftprintf/includes/libft/ft_cut_space.c
        ft_lftprintf/includes/libft/ft_cutstr.c
        ft_lftprintf/includes/libft/ft_get_integer.c
        ft_lftprintf/includes/libft/ft_isalnum.c
        ft_lftprintf/includes/libft/ft_isalpha.c
        ft_lftprintf/includes/libft/ft_isascii.c
        ft_lftprintf/includes/libft/ft_isdigit.c
        ft_lftprintf/includes/libft/ft_isprint.c
        ft_lftprintf/includes/libft/ft_isspace.c
        ft_lftprintf/includes/libft/ft_itoa.c
        ft_lftprintf/includes/libft/ft_itoa_base.c
        ft_lftprintf/includes/libft/ft_itoa_long.c
        ft_lftprintf/includes/libft/ft_itoa_mod.c
        ft_lftprintf/includes/libft/ft_length.c
        ft_lftprintf/includes/libft/ft_lst_free.c
        ft_lftprintf/includes/libft/ft_lstadd.c
        ft_lftprintf/includes/libft/ft_lstdel.c
        ft_lftprintf/includes/libft/ft_lstdelone.c
        ft_lftprintf/includes/libft/ft_lstiter.c
        ft_lftprintf/includes/libft/ft_lstmap.c
        ft_lftprintf/includes/libft/ft_lstnew.c
        ft_lftprintf/includes/libft/ft_match.c
        ft_lftprintf/includes/libft/ft_memalloc.c
        ft_lftprintf/includes/libft/ft_memccpy.c
        ft_lftprintf/includes/libft/ft_memchr.c
        ft_lftprintf/includes/libft/ft_memcmp.c
        ft_lftprintf/includes/libft/ft_memcpy.c
        ft_lftprintf/includes/libft/ft_memdel.c
        ft_lftprintf/includes/libft/ft_memmove.c
        ft_lftprintf/includes/libft/ft_memset.c
        ft_lftprintf/includes/libft/ft_new_integer_list.c
        ft_lftprintf/includes/libft/ft_numzero.c
        ft_lftprintf/includes/libft/ft_pow.c
        ft_lftprintf/includes/libft/ft_print_char_arr.c
        ft_lftprintf/includes/libft/ft_print_symbol.c
        ft_lftprintf/includes/libft/ft_putchar.c
        ft_lftprintf/includes/libft/ft_putchar_fd.c
        ft_lftprintf/includes/libft/ft_putchar_mod.c
        ft_lftprintf/includes/libft/ft_putendl.c
        ft_lftprintf/includes/libft/ft_putendl_fd.c
        ft_lftprintf/includes/libft/ft_putnbr.c
        ft_lftprintf/includes/libft/ft_putnbr_fd.c
        ft_lftprintf/includes/libft/ft_putnbr_mod.c
        ft_lftprintf/includes/libft/ft_putstr.c
        ft_lftprintf/includes/libft/ft_putstr_fd.c
        ft_lftprintf/includes/libft/ft_putstr_mod.c
        ft_lftprintf/includes/libft/ft_sort_word_tab.c
        ft_lftprintf/includes/libft/ft_stdin.c
        ft_lftprintf/includes/libft/ft_strcat.c
        ft_lftprintf/includes/libft/ft_strchr.c
        ft_lftprintf/includes/libft/ft_strclr.c
        ft_lftprintf/includes/libft/ft_strcmp.c
        ft_lftprintf/includes/libft/ft_strcpy.c
        ft_lftprintf/includes/libft/ft_strcpymap.c
        ft_lftprintf/includes/libft/ft_strdel.c
        ft_lftprintf/includes/libft/ft_strdup.c
        ft_lftprintf/includes/libft/ft_strequ.c
        ft_lftprintf/includes/libft/ft_striter.c
        ft_lftprintf/includes/libft/ft_striteri.c
        ft_lftprintf/includes/libft/ft_strjoin.c
        ft_lftprintf/includes/libft/ft_strlcat.c
        ft_lftprintf/includes/libft/ft_strlen.c
        ft_lftprintf/includes/libft/ft_strlen_mod.c
        ft_lftprintf/includes/libft/ft_strmap.c
        ft_lftprintf/includes/libft/ft_strmapi.c
        ft_lftprintf/includes/libft/ft_strncat.c
        ft_lftprintf/includes/libft/ft_strncmp.c
        ft_lftprintf/includes/libft/ft_strncpy.c
        ft_lftprintf/includes/libft/ft_strnequ.c
        ft_lftprintf/includes/libft/ft_strnew.c
        ft_lftprintf/includes/libft/ft_strnstr.c
        ft_lftprintf/includes/libft/ft_strrchr.c
        ft_lftprintf/includes/libft/ft_strsplit.c
        ft_lftprintf/includes/libft/ft_strstr.c
        ft_lftprintf/includes/libft/ft_strsub.c
        ft_lftprintf/includes/libft/ft_strtrim.c
        ft_lftprintf/includes/libft/ft_thebigest_word.c
        ft_lftprintf/includes/libft/ft_tolower.c
        ft_lftprintf/includes/libft/ft_toupper.c
        ft_lftprintf/includes/libft/get_next_line.c
        ft_lftprintf/includes/libft/libft.h
        ft_lftprintf/includes/printf.h
        ft_lftprintf/srcs/base_n_p.c
        ft_lftprintf/srcs/bonus_color.c
        ft_lftprintf/srcs/bonus_fd.c
        ft_lftprintf/srcs/bonus_smile.c
        ft_lftprintf/srcs/color_option.c
        ft_lftprintf/srcs/format_checker.c
        ft_lftprintf/srcs/format_checker_one.c
        ft_lftprintf/srcs/ft_printf.c
        ft_lftprintf/srcs/ft_printf_one.c
        ft_lftprintf/srcs/print_some_wight_aruc.c
        ft_lftprintf/srcs/work_i_one.c
        ft_lftprintf/srcs/work_i_two.c
        ft_lftprintf/srcs/work_uxo_po_one.c
        ft_lftprintf/srcs/work_uxo_po_two.c
        ft_lftprintf/srcs/work_uxo_pt_one.c
        ft_lftprintf/srcs/work_with_errors.c
        ft_lftprintf/srcs/work_with_f_one.c
        ft_lftprintf/srcs/work_with_f_three.c
        ft_lftprintf/srcs/work_with_f_two.c
        ft_lftprintf/srcs/work_with_flags.c
        ft_lftprintf/srcs/work_with_floats.c
        ft_lftprintf/srcs/work_with_form_x.c
        ft_lftprintf/srcs/work_with_format_char_str.c
        ft_lftprintf/srcs/work_with_int.c
        ft_lftprintf/srcs/work_with_o.c
        ft_lftprintf/srcs/work_with_p.c
        ft_lftprintf/srcs/work_with_u.c
        ft_lftprintf/srcs/work_with_uxo_part_one.c
        ft_lftprintf/srcs/work_with_uxo_part_two.c
        ft_lftprintf/srcs/work_with_x_big.c
        includes/args.h
        includes/constants.h
        includes/errors.h
        includes/libft.h
        includes/ft_ssl.h
        includes/printf.h
        includes/md5.h
        includes/sha256.h
        includes/sha512.h
        includes/base64.h
        includes/des.h
        includes/output.h
        srcs/main.c
        srcs/utils/args_finder.c
        srcs/utils/args_helper_00.c
        srcs/utils/errors_00.c
        srcs/utils/errors_01.c
        srcs/utils/free_utils.c
        srcs/utils/ft_safe_memalloc.c
        srcs/utils/ft_lstadd_back.c
        srcs/utils/errors_02.c
        srcs/utils/reader_helper.c
        srcs/utils/hashing_utils.c
        srcs/utils/print_output_00.c
        srcs/utils/print_output_01.c
        srcs/utils/print_output_02.c
        srcs/utils/entrance_to_hash_commands.c
        srcs/utils/fill_commands_00.c
        srcs/utils/base64_args_00.c
        srcs/utils/entrance_to_base64.c
        srcs/cipher_func/base64_in_prism.c
        srcs/utils/print_output_cipher_00.c
        srcs/utils/des_args.c
        srcs/utils/validate_pass_00.c
        srcs/utils/errors_03.c
        srcs/utils/entrance_to_des.c
        srcs/utils/print_output_cipher_01.c
        srcs/utils/des_args_01.c
        srcs/utils/entrance_to_des_01.c
        srcs/utils/split_by_command.c
        srcs/key_utils/generate_utils_00.c
        srcs/key_utils/generate_key.c
        srcs/utils/pass_reader.c
        srcs/hash_func/md5_00.c
        srcs/hash_func/sha256_00.c
        srcs/hash_func/md5_01.c
        srcs/hash_func/md5_02.c
        srcs/hash_func/sha256_01.c
        srcs/hash_func/sha256_02.c
        srcs/hash_func/sha256_03.c
        srcs/hash_func/sha256_04.c
        srcs/hash_func/sha512_00.c
        srcs/hash_func/sha512_01.c
        srcs/hash_func/sha512_02.c
        srcs/hash_func/sha512_03.c
        srcs/hash_func/sha256_00.c
        srcs/hash_func/md5_03.c
        srcs/cipher_func/base64.c
        srcs/cipher_func/base64_enc_00.c
        srcs/cipher_func/base64_dec_00.c
        srcs/cipher_func/des_starter.c
        srcs/cipher_func/des.c
        srcs/cipher_func/ecb.c
        srcs/cipher_func/cbc.c
        srcs/cipher_func/des3.c
        srcs/cipher_func/pcbc.c
        srcs/cipher_func/cfb.c
        srcs/cipher_func/ofb.c
        srcs/cipher_func/ctr.c
        srcs/cipher_func/divide_by_des_mode.c
        srcs/cipher_func/des_utils_00.c
        srcs/cipher_func/des_utils_01.c
        srcs/utils/split_by_command_01.c srcs/utils/rsa_args_00.c includes/rsa.h srcs/utils/entrance_to_rsa.c srcs/rsa_func/gen_rsa_00.c srcs/rsa_utils/asn_writer.c srcs/rsa_utils/rsa_key_pem_writer.c srcs/rsa_utils/pub_generator.c srcs/rsa_utils/rsa_priv_checker.c srcs/rsa_utils/rsa_pub_checker.c srcs/rsa_utils/key_stream_reader.c srcs/rsa_utils/rsa_key_converter.c srcs/rsa_utils/des_hiding.c srcs/utils/ft_del_simple_list.c srcs/rsa_utils/ft_hexdump.c includes/hexdump.h srcs/utils/gen_rsa_args.c srcs/utils/rsa_utl_args.c srcs/utils/entrance_to_gen_rsa.c srcs/utils/entrance_to_rsa_utl.c srcs/rsa_func/pem_converter.c srcs/utils/free_utils_rsa.c srcs/rsa_utils/key_text_printer.c srcs/rsa_utils/raw_key_converter.c srcs/rsa_func/rsa_cipher_process.c)
